syntax = "proto3";
option go_package = "github.com/ngld/knossos/packages/api/common";
package ngld.knossos;

import "google/protobuf/timestamp.proto";

// Utilities
message Checksum {
  string algo = 1;
  bytes digest = 2;
}

message FileRef {
  string fileid = 1;
  repeated string urls = 2;
}

message CpuSpec {
  repeated string required_features = 1;
}

// Core types
enum ModType {
  MOD = 0;
  TOTAL_CONVERSION = 1;
  ENGINE = 2;
  TOOL = 3;
  EXTENSION = 4;
}

enum ReleaseStability {
  STABLE = 0;
  RC = 1;
  NIGHTLY = 2;
}

message Release {
  // core meta
  string modid = 1;
  string version = 2;
  string title = 5;
  string folder = 7;
  ReleaseStability stability = 3;
  ModType type = 6;
  string parent = 8;

  // mod page
  string description = 10;
  FileRef teaser = 11;
  FileRef banner = 12;
  string release_thread = 13;
  repeated FileRef screenshots = 14;
  repeated string videos = 15;
  google.protobuf.Timestamp released = 16;
  google.protobuf.Timestamp updated = 17;

  // install
  string notes = 20;

  // launch
  string cmdline = 21;
  repeated string mod_order = 24;
  map<string, string> dependency_snapshot = 22;
  bool snapshot_modified = 23;

  // content
  repeated Package packages = 4;
}

enum PackageType {
  REQUIRED = 0;
  RECOMMENDED = 1;
  OPTIONAL = 2;
}

message Dependency {
  string modid = 1;
  string constraint = 2;
  repeated string packages = 3;
}

message EngineExecutable {
  string path = 1;
  string label = 2;
  uint32 priority = 3;
  bool debug = 4;
}

message PackageArchive {
  string id = 1;
  string label = 2;
  string destination = 3;
  Checksum checksum = 4;
  uint64 filesize = 5;
  FileRef download = 6;
}

message PackageFile {
  string path = 1;
  // archive id
  string archive = 2;
  string archive_path = 3;
  Checksum checksum = 4;
}

message Package {
  string name = 1;
  string folder = 2;
  string notes = 3;
  PackageType type = 4;
  CpuSpec cpu_spec = 5;
  bool knossos_vp = 6;

  repeated Dependency dependencies = 10;
  repeated PackageArchive archives = 11;
  repeated PackageFile files = 12;

  repeated EngineExecutable executables = 20;
}
